--- a/be.lproj/Localizable.strings
+++ b/be.lproj/Localizable.strings
@@ -7,3 +7,7 @@
 */
 "Minsk cat museum" = "Музей кота ў Мінску";
 "I don't know what should i write here" = "Усе, што трэба ведаць про любімых жывел у цэнтры Мінска";
+"Minsk art museum" = "Мастацкі музей Мінска";
+"The biggest art museum situated in the center of the city"="Найбуйнейшы музей, у цэнтры горада";
+"Car museum" = "Аўтамабільны музей";
+"Museum with different cars from USSR, Russia and Belarus" = "Музей з рознымі аўтамабілямі СССР, Расіі і Беларусі";
