--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -8,3 +8,7 @@
 
 "Minsk cat museum" = "Minsk cat museum";
 "I don't know what should i write here" = "I don't know what should i write here";
+"Minsk art museum" = "Minsk art museum";
+"The biggest art museum situated in the center of the city"="The biggest art museum situated in the center of the city";
+"Car museum" = "Car museum";
+"Museum with different cars from USSR, Russia and Belarus" = "Museum with different cars from USSR, Russia and Belarus";
