--- a/ru.lproj/Localizable.strings
+++ b/ru.lproj/Localizable.strings
@@ -7,3 +7,7 @@
 */
 "Minsk cat museum" = "Минский музей кота";
 "I don't know what should i write here" = "Все о ваших любимцах в центре города";
+"Minsk art museum" = "Минский художественный музей";
+"The biggest art museum situated in the center of the city"="Самый большой музей, который расположен в центре города";
+"Car museum" = "Автомобильный музей";
+"Museum with different cars from USSR, Russia and Belarus" = "Музей с множеством различных автомобилей из СССР, России и Беларуси";
